XSCOLIBRI-109: Error / Warning / Info messages inline overlap with surrounding text and eachother XSTOUCAN-124: Error / Warning / Info messages inline overlap with surrounding text and eachother XSALBATROSS-63: Error / Warning / Info messages inline overlap with surrounding text and eachother Fixed with help from Marta Girdea.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@23666 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-toucan/src/main/resources/toucan/toucan.css
+++ b/xwiki-platform-toucan/src/main/resources/toucan/toucan.css
@@ -3830,3 +3830,9 @@ ul.xlist li.xitem div.xitemcontainer ul.xlist {
   background-image: url( $xwiki.getSkinFile('icons/silk/exclamation.gif') );
   color: #e14726;
 }
+
+span.errormessage, span.warningmessage, span.infomessage, span.plainmessage {
+  background-position: 2px center;
+  overflow: visible;
+  padding: 0 2px 0 22px;
+}
